test/parser/amp_operator.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:3: error: expected expression
  &&x;

  // CHECK: [[# @LINE + 1 ]]:3: error: expected expression
  &&&x;

  // CHECK: [[# @LINE + 1 ]]:3: error: expected expression
  &&&&x;

  &x;
  // CHECK: UnaryOperator: '&'
  // CHECK-NEXT:   DeclRefExpr: x

  &x && &x;
  // CHECK: BinaryOperator: '&&'
  // CHECK-NEXT:   UnaryOperator: '&'
  // CHECK-NEXT:     DeclRefExpr: x
  // CHECK-NEXT:   UnaryOperator: '&'
  // CHECK-NEXT:     DeclRefExpr: x
}
